# fakulte-turnuva

./: CLAUDE.md  KURULUM.txt  index.html  package-lock.json  package.json  vite.config.ts  örnek.html
.github/workflows/: build-windows.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: backup.rs  matches.rs  members.rs  mod.rs  stats.rs  teams.rs  tournament.rs
src/api/: backup.ts  matchApi.ts  members.ts  stats.ts  teams.ts  tournament.ts
src/components/: StoryExportTemplate.tsx
src/components/layout/: ErrorBanner.tsx
src/components/match/: MatchSheet.tsx
src/components/shell/: ArenaShell.tsx
src/components/teams/: MembersPanel.tsx  PlayerDetailModal.tsx  TeamFormPanel.tsx  TeamListPanel.tsx
src/components/ui/: ConfirmDialog.tsx  StoryExportButton.tsx  TeamBadge.tsx  Toast.tsx
src/components/views/: DrawView.tsx  FixturesView.tsx  HomeView.tsx  ManagementView.tsx  ScorersView.tsx  StandingsView.tsx  TeamsTabView.tsx
src/hooks/: useTournamentApp.ts
src/styles/: arena.css  components.css  global.css  index.css
src/types/: team.ts  tournament.ts
src/utils/: storyExport.ts
