[package]
name = "fakulte_turnuva"
version = "0.1.0"
description = "Fakülteler arası turnuva takım yönetimi"
authors = ["you"]
edition = "2021"

[lib]
name = "fakulte_turnuva_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rand = "0.8"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
